push project finish

--- a/CP2.API/appsettings.json
+++ b/CP2.API/appsettings.json
@@ -5,5 +5,8 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "Oracle": "User Id=rm553326;Password=091003;Data Source=oracle.fiap.com.br:1521/orcl"
+  }
 }
