--- a/CP2.API/CP2.API.csproj
+++ b/CP2.API/CP2.API.csproj
@@ -15,6 +15,8 @@
 		<PackageReference Include="Oracle.EntityFrameworkCore" Version="8.23.60" />
 		<PackageReference Include="Swashbuckle.AspNetCore" Version="6.4.0" />
 		<PackageReference Include="Swashbuckle.AspNetCore.Annotations" Version="6.8.1" />
+		<PackageReference Include="Swashbuckle.AspNetCore.Swagger" Version="6.8.1" />
+		<PackageReference Include="Swashbuckle.AspNetCore.SwaggerGen" Version="6.8.1" />
 	</ItemGroup>
 
 </Project>
